--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
   <meta charset="UTF-8">
   <title>Pics to words. Игра для изучения иностранных языков</title>
   <link rel="stylesheet" href="css/style.css">
-  <!--подключите библиотеки React, ReactDOM и BabelJS-->
+  <script src="./vendor/react.development.js"></script>
+  <script src="./vendor/react-dom.development.js"></script>
+  <script src="./vendor/babel.min.js"></script>
   <!--подключите файл данных-->
 </head>
 <body>
-<div id="root">Корневой элемент</div>
+<div id="root"></div>
 <script type="text/babel">
   const container = document.getElementById('root');
-  // TODO: создайте корневой компонент приложения
-  // TODO: создайте компонент карточки
-  // TODO: передайте данные в компоненты
+  const root = ReactDOM.createRoot(container);
+  root.render(<App/>)
+
+  function App() {
+    return (
+      <div></div>
+    );
+  }
 </script>
 </body>
 </html>
