Размечает отображение состояния карточек

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 <script type="text/babel">
   const container = document.getElementById('root');
   const root = ReactDOM.createRoot(container);
-  root.render(<App words={words}/>)
+  root.render(<App words={words} selectedItems={selectedItems} finishedItems={finishedItems}/>)
 
-  function App({words = []}) {
-    const cards = words.map((item) => (
+  function App({words = [], selectedItems = [], finishedItems = []}) {
+    const cards = words.map((item, index) => (
       <Card
+        key={item.id}
         type={item.type}
         url={item.url}
         text={item.word}
+        isSelected={selectedItems.includes(item.id)}
+        isFinished={finishedItems.includes(item.id)}
       />
     ));
     return (
@@ -33,12 +36,13 @@
     );
   }
 
-  function Card({type, text, url}) {
+  function Card({type, text, url, isSelected = false, isFinished = true}) {
     const content = type === 'image'
       ? <img src={url} width="185" height="100" alt=""/>
-      : <span>{text}</span>
+      : <span>{text}</span>;
+    const className = `card ${isSelected ? 'selected' : ''} ${isFinished ? 'disabled' : ''}`;
     return (
-      <li className="card">
+      <li className={className}>
         {content}
       </li>
     )
