--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
   root.render(<App words={words} selectedItems={selectedItems} finishedItems={finishedItems}/>)
 
   function App({words = [], selectedItems = [], finishedItems = []}) {
-    const cards = words.map((item, index) => (
+    return (
+      <section className="game">
+        <Grid words={words} selectedItems={selectedItems} finishedItems={finishedItems}/>
+      </section>
+    );
+  }
+
+  function Grid({words, selectedItems, finishedItems}) {
+    const cards = words.map((item) => (
       <Card
         key={item.id}
         type={item.type}
@@ -28,12 +36,10 @@
       />
     ));
     return (
-      <section className="game">
-        <ul className="cards">
-          {cards}
-        </ul>
-      </section>
-    );
+      <ul className="cards">
+        {cards}
+      </ul>
+    )
   }
 
   function Card({type, text, url, isSelected = false, isFinished = true}) {
